--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="Jeferson Cruz">
   <link rel="icon" href="img/blackfish-favicon.png">
-  <title>WALLET MAP</title>
+  <title>wallet.map</title>
 
   <!-- angularjs -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
@@ -39,30 +39,34 @@
     <!-- Sidebar  -->
     <nav id="sidebar">
       <div class="sidebar-header">
-        <h3>Wallet Map</h3>
+        <h3><b>wallet</b>.map</h3>
       </div>
 
       <ul class="list-unstyled components">
         <p><i class="fas fa-compass"></i> compass for money</p>
 
         <li class="active">
-          <a href="#">Dashboard</a>
+          <a href="#">dashboard</a>
         </li>
 
         <li>
-          <a href="#">Ações</a>
+          <a href="#">radar</a>
         </li>
 
         <li>
-          <a href="#">BDRs</a>
+          <a href="#">ações</a>
         </li>
 
         <li>
-          <a href="#">FIIs</a>
+          <a href="#">bdrs</a>
         </li>
 
         <li>
-          <a href="#">Cripto</a>
+          <a href="#">fiis</a>
+        </li>
+
+        <li>
+          <a href="#">cripto</a>
         </li>
       </ul>
     </nav>
@@ -76,6 +80,7 @@
           <button type="button" id="sidebarCollapse" class="btn btn-secondary">
             <i class="fas fa-bars"></i>
           </button>
+
         </div>
       </nav>
 
@@ -101,7 +106,7 @@
         laborum.</p>
 
       <footer class="pt-2 mt-2 text-body-secondary border-top">
-          &copy; 2024 | Desenvolvido por BLACKFISH LABS
+        &copy; 2024 | Desenvolvido por BLACKFISH LABS
       </footer>
     </div>
   </div>
