--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
 
       <ul class="list-unstyled components">
-        <p><i class="fas fa-compass"></i> compass for money</p>
+        <p><i class="fas fa-compass"></i> <b>compass</b> for money</p>
 
         <li class="active">
           <a href="#">dashboard</a>
